--- a/Final_NST_Notebook.ipynb
+++ b/Final_NST_Notebook.ipynb
@@ -1680,14 +1680,14 @@
     "from PIL import Image\n",
     "import torchvision.transforms as T\n",
     "\n",
-    "# ==== Paths ====\n",
+    "# Paths\n",
     "video_path = r\"C:\\Users\\OMAR-HP\\Desktop\\Final_NST_Project\\input\\video.mp4\"\n",
     "style_path = r\"C:\\Users\\OMAR-HP\\Desktop\\Final_NST_Project\\styles\\style1.jpg\"\n",
     "output_video_path = r\"C:\\Users\\OMAR-HP\\Desktop\\Final_NST_Project\\output\\videos\\styled_video.mp4\"\n",
     "output_gif_path = r\"C:\\Users\\OMAR-HP\\Desktop\\Final_NST_Project\\output\\videos\\styled_video.gif\"\n",
     "os.makedirs(os.path.dirname(output_video_path), exist_ok=True)\n",
     "\n",
-    "# ==== Load AdaIN Model ====\n",
+    "# Load AdaIN Model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "from net import decoder as _decoder, vgg as _vgg\n",
     "from function import adaptive_instance_normalization as _adain\n",
@@ -1700,7 +1700,7 @@
     "decoder.to(device).eval()\n",
     "encoder = torch.nn.Sequential(*list(vgg.children())[:31])\n",
     "\n",
-    "# ==== Image Loaders ====\n",
+    "# Image Loaders\n",
     "def load_img_torch(path, size=None):\n",
     "    img = Image.open(path).convert(\"RGB\")\n",
     "    tfm = [T.ToTensor()]\n",
@@ -1720,7 +1720,7 @@
     "    out = decoder(tF)\n",
     "    return out.clamp(0, 1)\n",
     "\n",
-    "# ==== Video Processing ====\n",
+    "# Video Processing\n",
     "cap = cv2.VideoCapture(video_path)\n",
     "fps = cap.get(cv2.CAP_PROP_FPS)\n",
     "frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
@@ -1757,7 +1757,7 @@
     "\n",
     "print(f\"Styled video saved to {output_video_path}\")\n",
     "\n",
-    "# ==== Create GIF ====\n",
+    "# Create GIF\n",
     "import imageio\n",
     "cap = cv2.VideoCapture(output_video_path)\n",
     "gif_frames = []\n",
@@ -3166,4 +3166,5 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
