--- a/Final_NST_Notebook.ipynb
+++ b/Final_NST_Notebook.ipynb
@@ -124,7 +124,7 @@
     "### Phase 1: Load Content and Style Images\n",
     "\n",
     "To test the pipeline, I will use:\n",
-    "- **Content image**: Paris at night (urban architecture)\n",
+    "- **Content image**: City Skyline (urban architecture)\n",
     "- **Style image**: *The Starry Night* by Van Gogh\n",
     "\n",
     "Both images are resized to a working resolution (512x512) in later preprocessing steps. Here, I will visualize them to confirm correct paths and formatting.\n"
@@ -3166,5 +3166,6 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
 
