--- a/Final_NST_Notebook.ipynb
+++ b/Final_NST_Notebook.ipynb
@@ -759,7 +759,7 @@
    "metadata": {},
    "source": [
     "### Notes on Johnson et al. Implementation\n",
-    "- **Pre-trained Model:** I used a PyTorch Hub implementation of Johnson's feedforward network, trained for the \"Candy\" style.  \n",
+    "- **Pre-trained Model:** I used a PyTorch Hub implementation of Johnson's feedforward network, trained for the \"Starry Night\" style.  \n",
     "  In practice, we could fine-tune the model with the chosen style image for improved fidelity.\n",
     "- **Performance:** On GPU, the entire forward pass takes less than a second, compared to minutes for Gatys NST.\n",
     "- **Applications:** This speed makes the approach suitable for **real-time video NST**, interactive art installations, and mobile applications.\n",
@@ -3166,6 +3166,7 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
 
 
 
